# roadmap-agent

./: .gitignore  AGENT.md  ALIYUN_DATABASE_CONFIG.md  ALL_AGENTS_FIXED.md  BACKEND_CONTENT_GENERATION_STATUS_FIX_2025-12-09.md  BATCH_INVITE_LOGIN_FIX.md  BUG_FIX_REPORT_2025-12-09.md  CARD_REDESIGN_QUICK_REF.md  CHECKPOINT_WRITE_TIMEOUT_FIX.md  CODE_REVIEW_ANALYSIS.md  COMPLETE_FIX_REPORT_2025-12-09.md  CONCEPT_DETAILS_IMPLEMENTATION.md  CONCEPT_ID_URL_ENCODING_FIX.md  CONCEPT_URL_SYNC_FIX.md  CONTENT_GENERATION_FRAMEWORK_UPDATE_FIX.md  CONTENT_GENERATION_IMPLEMENTATION_SUMMARY.md  CONTENT_GENERATION_LOG_DESIGN.md  CURRICULUM_ARCHITECT_FIX.md  CUSTOM_ASSESSMENT_UNIQUE_CONSTRAINT_FIX.md  DATABASE_CONNECTION_AND_PARSING_FIX.md  DATABASE_CONNECTION_TIMEOUT_FIX.md  DUPLICATE_OPERATION_ID_FIX.md  EDIT_PLAN_BUGS_FIX_2025-12-23.md  EXECUTION_LOG_FIXES.md  EXECUTION_LOG_REDESIGN.md  EXECUTION_LOG_STEP_GROUPING.md  FIX_FLOWCHART.md  FIX_SUMMARY_2025-12-09.md  FIX_SUMMARY_QUICK.md  FRAMEWORK_DATA_SYNC_ISSUE_RESOLVED.md  FRONTEND_TASK_ID_ANALYSIS.md  FastAPI_Enterprise_Architecture_Guide.md  GENERATE_ROADMAP_FLOW_IMPROVEMENT.md  HOME_PAGE_REDESIGN_2025-12-20.md  HUMAN_REVIEW_FEEDBACK_PERSISTENCE.md  HUMAN_REVIEW_INTERRUPT_FIX.md  INTELLIGENT_RETRY_MECHANISM.md  INTENT_ANALYSIS_API_REFACTOR.md  INTENT_ANALYSIS_DISPLAY_FIX.md  ISSUE_FIX_SUMMARY_2025-12-07.md  (+67 more)
backend/: .env.example  .gitignore  AGENT.md  ARCHITECTURE_COMPARISON.md  BUGFIX_TASKSTATUS.md  CELERY_RAILWAY_DEPLOYMENT_SUMMARY.md  CELERY_TIMEOUT_FIX.md  CELERY_WORKER_GUIDE.md  CHECKPOINT_RECOVERY_DATA_PERSISTENCE_FIX.md  CONCURRENT_OPTIMIZATION_PLAN.md  CONCURRENT_REFACTOR_SUMMARY.md  DEPLOYMENT_COMPARISON.md  DOCKER_UV_MIGRATION.md  Dockerfile  NEW_FILES_SUMMARY.md  PHASE2_TEST_SUCCESS.txt  PROJECT_COMPLETION.md  QUICK_START_RAILWAY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_VISUAL_GUIDE.md  README.md  TEST_SUCCESS.md  TEST_VERIFICATION_COMPLETE.md  docker-compose.yml  env.supabase.example  pyproject.toml  railway.toml
backend/alembic/: __init__.py  env.py
backend/app/: __init__.py  main.py
backend/doc/: TAVILY_QUOTA_UPDATER.md  TAVILY_QUOTA_UPDATER_QUICKSTART.md
backend/docs/: 20250101_Celery_Worker进程初始化修复.md  20250101_Celery连接池耗尽修复.md  20250101_Supabase_RLS说明.md  20250101_Supabase数据库统一迁移.md  20250101_Supabase迁移实施报告.md  20250101_Supabase预编译语句冲突修复.md  20250101_Tavily_Key预分配优化.md  20250101_WorkflowBrain_Commit修复.md  20250101_WorkflowStep枚举补充.md  20250101_内容生成阻塞问题分析.md  20250101_日志丢失修复实施.md  20250101_日志丢失根本原因分析.md  20250101_状态机流转与并行设计分析.md  20250101_移除Supabase事务池化配置.md  20250101_连接Checkout时预编译语句清理.md  20250101_连接池耗尽修复历史.md  20250101_重试任务导入错误修复.md  20250102_LangGraph连接池配置优化.md  20250103_事件循环冲突根本修复.md  20250103_任务阻塞根本原因分析.md  20251231_Celery任务优化与速率限制.md  20251231_Celery异步事件循环冲突修复.md  20251231_IntentAnalysis唯一约束冲突修复.md  20251231_Railway三队列迁移指南.md  20251231_Railway多队列部署配置.md  20251231_Railway连接池耗尽修复.md  20251231_事件循环冲突完整修复方案.md  20251231_人工审核状态修复.md  20251231_任务重试逻辑修复.md  20251231_内容保存方法修复.md  20251231_内容生成保存失败修复.md  20251231_后端错误修复汇总.md  20251231_字段引用错误修复.md  20251231_并发控制机制分析.md  20251231_教程批量保存主键冲突修复.md  20251231_数据库优化实施总结.md  20251231_数据库会话使用规范.md  20251231_数据库引擎事件循环感知修复.md  20251231_重试任务状态更新修复.md  20260103_Tavily配额刷新接口性能优化.md  (+84 more)
backend/migrations/: add_soft_delete_fields.sql
backend/prompts/: curriculum_architect.j2  edit_plan_analyzer.j2  intent_analyzer.j2  intent_recognizer.j2  note_recorder.j2  (+13 more)
(+883 files in other folders)
