[project]
name = "learning-roadmap-backend"
version = "1.0.0"
description = "个性化学习路线图生成系统后端"
authors = [
    {name = "Learning Roadmap Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "langgraph>=1.0.2",
    "litellm>=1.69.0",
    "aiohttp>=3.9.2",
    "httpx>=0.28.1",
    "aioboto3>=13.3.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "jinja2>=3.1.4",
    "opentelemetry-api>=1.28.2",
    "opentelemetry-sdk>=1.28.2",
    "opentelemetry-instrumentation-fastapi>=0.49b2",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    "psycopg2-binary>=2.9.9",
    "psycopg[binary]>=3.1.0",
    "langgraph-checkpoint-postgres>=1.0.0",
    "psycopg-pool>=3.2.0",
    "httpx-ws>=0.8.2",
    "openai>=2.8.1",
    "ddgs>=9.9.3",
    "tavily-python>=0.5.0",
    # FastAPI Users 认证相关
    "fastapi-users[sqlalchemy]>=13.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "resend>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "polyfactory>=2.17.0",
    "black>=24.10.0",
    "ruff>=0.8.3",
    "mypy>=1.13.0",
]

# uv 依赖组配置（uv 使用 dependency-groups 而不是 optional-dependencies）
[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "polyfactory>=2.17.0",
    "black>=24.10.0",
    "ruff>=0.8.3",
    "mypy>=1.13.0",
    "rich>=13.7.0",
]

# Poetry 配置（可选，用于兼容 Poetry）
[tool.poetry]
name = "learning-roadmap-backend"
version = "1.0.0"
description = "个性化学习路线图生成系统后端"
authors = ["Learning Roadmap Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9"
pydantic-settings = "^2.6"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
langgraph = "^1.0.2"
litellm = "^1.69.0"
aiohttp = "^3.9.2"
httpx = "^0.28.1"
aioboto3 = "^13.3.0"
structlog = "^24.4.0"
tenacity = "^9.0.0"
jinja2 = "^3.1.4"
ddgs = "^1.0.0"
opentelemetry-api = "^1.28.2"
opentelemetry-sdk = "^1.28.2"
opentelemetry-instrumentation-fastapi = "^0.49b2"
alembic = "^1.13.0"
greenlet = "^3.0.0"
psycopg2-binary = "^2.9.9"
psycopg = {extras = ["binary"], version = "^3.1.0"}
langgraph-checkpoint-postgres = "^1.0.0"
psycopg-pool = "^3.2.0"
tavily-python = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
polyfactory = "^2.17.0"
black = "^24.10.0"
ruff = "^0.8.3"
mypy = "^1.13.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.uv]
# 默认安装开发依赖组
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# 关键修复：将 fixture loop scope 设置为 session，确保所有测试共享同一个 event loop
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 慢速测试（包含完整工作流和教程生成）",
]

